# feathersim

./: .gitignore  CLAUDE.md  DECISIONS.md  ENGINEERING.md  LEARNINGS.md  Makefile  PLAN.md  README.md  pyproject.toml  requirements.txt
.claude/agents/: docs-researcher.md  frontend-designer.md  manipulation-engineer.md  perception-viz-engineer.md  render-qa.md  reviewer.md  test-runner.md  world-artist.md
.github/workflows/: ci.yml
docs/: fleet_bench.json  perception_bench.json
docs/agents/: domain.md  issue-tracker.md
examples/: tend_one_machine.py
feathersim/: __init__.py  demo.py
feathersim/autonomy/: __init__.py  loop.py
feathersim/control/: __init__.py  go_to_pose.py
feathersim/dashboard/: __init__.py  fleet_manager.py  fleet_server.py  server.py  sim_manager.py
feathersim/fleet/: __init__.py  demo.py  executor.py  manager.py  orca.py  scheduling.py
feathersim/kinematics/: __init__.py  holonomic.py
feathersim/perception/: __init__.py  dataset.py  infer.py  metrics.json  model.py  randomize.py  train.py
feathersim/planning/: __init__.py  astar.py  follow.py  occupancy.py
feathersim/policy/: __init__.py  dataset.py  demo.py  metrics_policy.json  model.py  policy.py  train.py
scripts/: bench_fleet.py  bench_perception.py  print_state.py  record_fleet_gif.py  record_gif.py
tests/: test_autonomy.py  test_control.py  test_dashboard.py  test_fleet.py  test_fleet_dashboard.py  test_kinematics.py  test_machine.py  test_orca.py  test_perception.py  test_planning.py  test_policy.py  test_randomize.py  test_sdk.py  test_smoke.py  test_world.py
(+7 files in other folders)
